Shared Schedules - Link color and spacing fixes (#1655)
* Shared Schedules - Link color and spacing fixes
[stage-1]

* Make Done a large button and fix tabs in scss file
[stage-1]

--- a/web/scss/sections/schedules.scss
+++ b/web/scss/sections/schedules.scss
@@ -3,3 +3,17 @@
   max-width: 320px;
   line-height: 24px;
 }
+
+.shared-schedule-modal {
+  .copy-text-box {
+    background-color: #f0f0f0;
+  }
+
+  .u_bordered-hover {
+    color: $link-color;
+
+    &:hover {
+      color: $link-hover-color;
+    }
+  }
+}
